--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,10 +1,11 @@
-#Fri May 03 18:45:15 PDT 2019
-javarush.level.filter=9
+#Thu Oct 31 15:05:17 EDT 2019
+javarush.last.task.key=com.javarush.task.task26.task2613.big13
+javarush.session.id=5246CDC7195E2BAB33388866B0DDB12A
 javarush.skip.set.autoscrolls=true
-javarush.session.id=4A35603AB8A517C7373A95A905417793
-javarush.last.task.key=com.javarush.task.task26.task2613.big02
-javarush.status.filter=ASSIGNED
+desktop-game-engine.jar=1.0
 javarush.query.filter=
 javarush.user.secretkey=667eb483-c5d3-4018-9ece-a9d4d5418c1c
-javarush.last.task.path=/Users/alexp/Desktop/JavaRushTasks/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task26/task2613
+javarush.last.task.path=/Users/alexp/Desktop/My_projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task26/task2613
+javarush.status.filter=ASSIGNED
 javarush.quest.filter=QUEST_JAVA_COLLECTIONS
+javarush.level.filter=9
