--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,11 +1,11 @@
-#Thu Oct 31 15:05:17 EDT 2019
-javarush.last.task.key=com.javarush.task.task26.task2613.big13
+#Fri Mar 06 13:06:23 EST 2020
+javarush.last.task.key=com.javarush.games.racer.part01
 javarush.session.id=5246CDC7195E2BAB33388866B0DDB12A
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.query.filter=
 javarush.user.secretkey=667eb483-c5d3-4018-9ece-a9d4d5418c1c
-javarush.last.task.path=/Users/alexp/Desktop/My_projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task26/task2613
+javarush.last.task.path=/Users/alexp/Desktop/My_projects/JavaRushTasks/8.Games/src/com/javarush/games/racer
 javarush.status.filter=ASSIGNED
-javarush.quest.filter=QUEST_JAVA_COLLECTIONS
-javarush.level.filter=9
+javarush.quest.filter=QUEST_GAMES
+javarush.level.filter=-1
